syntax = "proto3";

package tcpTest;

message test01 {
	string desc = 1;
	uint32 idrn = 2;
}
